Update codegen and package generator (#332)
* Update codegen and package generator

- fix deserialization of empty ObjectTypeDefinitionOrTypeReference
- resolve dependencies during package generation and publish
- disable bloop for packages
- use 32GB heap for package compilation
- uncomment two fixed codegen integration tests

* Add resource references

Fixes #144

* Fix dots in package segments in codegen

* Add codegen for provider config

Fixes #259

* Add ConfigValueReader(s) for PulumiEnum(s)

- add stringEnumReader,
booleanEnumReader,
intEnumReader, doubleEnumReader to ConfigValueReader

* Update Justfile

* Codegen and package generation fixes for besom-eks publishing

* Codegen and package generation fixes for besom-aws-apigateway publishing

* Fix union decoders

- fix decoder for Boolean | String
- add unionDecoders:
  - unionDecoder3
  - unionDecoder4
  - unionDecoder5
  - unionDecoder6
  - unionDecoder7
  - unionDecoder8